salesforce-twitter integration task/force-app/main/default/objects/Tweet__c/fields/Tweet_Date__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Date__c</fullName>
    <description>Timestamp of when the tweet was posted.</description>
    <label>Tweet Date</label>
    <type>DateTime</type>
</CustomField>