salesforce-twitter integration task/force-app/main/default/objects/Tweet__c/fields/Tweet_ID__c.field-meta.xml
<CustomField>
    <fullName>Tweet_ID__c</fullName>
    <label>Tweet ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>