salesforce-twitter integration task/force-app/main/default/objects/Tweet__c/fields/Tweet_Text__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Text__c</fullName>
    <label>Tweet Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>