salesforce-twitter integration task/force-app/main/default/objects/Tweet__c/fields/Tweet_Title__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Title__c</fullName>
    <label>Tweet Title</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>